# pytdx-mcp

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/pytdx_mcp/: __init__.py  server.py
